Experimental changes to better integrate AutoPlace and HandRestock